Add final prediction module and complete analysis

--- a/customer_churn_analysis.ipynb
+++ b/customer_churn_analysis.ipynb
@@ -2,26 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4c2da081",
+   "id": "c297a17a",
    "metadata": {},
    "source": [
-    "# Analysis and Prediction of Customer Churn\n",
+    "# Analysis and Prediction of Telco Customer Churn\n",
     "\n",
     "### 1. Project Overview\n",
-    "This project analyzes a telecom customer dataset to identify key drivers of churn. The primary goals are to understand the characteristics of customers who leave the service and to build a predictive model that can identify at-risk customers. This is a classic classification problem with significant business value.\n",
-    "\n",
-    "First, let's set up our environment and load the data."
+    "This project analyzes a telecom customer dataset to identify key drivers of churn. The goal is to build a classification model that can predict which customers are most likely to leave, enabling the business to take proactive retention measures."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0353d748",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "id": "87e6799e",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -32,98 +26,80 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# Sample Customer Churn Dataset\n",
-    "# churn: 1 = Customer left, 0 = Customer stayed\n",
-    "# tenure: How many months the customer has been with the company\n",
-    "# monthly_charges: The customer's monthly bill\n",
-    "data = {\n",
-    "    'tenure': [2, 48, 5, 12, 55, 24, 1, 70, 3, 65],\n",
-    "    'monthly_charges': [50, 100, 60, 75, 110, 80, 45, 115, 55, 112],\n",
-    "    'age': [25, 50, 22, 30, 60, 28, 21, 55, 24, 48],\n",
-    "    'churn': [1, 0, 1, 1, 0, 0, 1, 0, 1, 0]\n",
-    "}\n",
-    "churn_df = pd.DataFrame(data)\n",
+    "# Load the full dataset from the .csv file\n",
+    "file_path = 'WA_Fn-UseC_-Telco-Customer-Churn.csv'\n",
+    "churn_df = pd.read_csv(file_path)\n",
     "\n",
-    "# Display the first 5 rows to understand the data\n",
-    "churn_df.head()"
+    "# Display basic information and the first 5 rows\n",
+    "print(f\"Dataset loaded successfully. Shape of the data: {churn_df.shape}\")\n",
+    "print(\"\\nData Info:\")\n",
+    "churn_df.info()\n",
+    "\n",
+    "print(\"\\nSample of the data:\")\n",
+    "display(churn_df.head())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "25f71772",
+   "id": "68e0bf58",
    "metadata": {},
    "source": [
-    "### 2. Exploratory Data Analysis (EDA)\n",
-    "My initial hypothesis was that customers with higher monthly charges would be more likely to churn. Let's test this by analyzing the average monthly charges for customers who churned versus those who did not."
+    "### 2. Data Cleaning and Preprocessing\n",
+    "\n",
+    "Real-world data often needs cleaning. We need to handle non-numeric values before we can use the data in a machine learning model.\n",
+    "\n",
+    "* `TotalCharges` column contains spaces for some rows, which should be numeric. We'll convert it.\n",
+    "* Categorical columns like `gender` and `Partner` need to be converted into numbers.\n",
+    "* We will convert the target variable `Churn` from 'Yes'/'No' to 1/0."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2161389",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "id": "c2155e99",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate and print the average monthly charges by churn status\n",
-    "avg_charges_by_churn = churn_df.groupby('churn')['monthly_charges'].mean()\n",
+    "# Handle non-numeric values in 'TotalCharges'\n",
+    "churn_df['TotalCharges'] = pd.to_numeric(churn_df['TotalCharges'], errors='coerce')\n",
+    "# Fill any resulting missing values (NaNs) with the median\n",
+    "churn_df.dropna(inplace=True)\n",
     "\n",
-    "print(\"--- Average Monthly Charges by Churn Status ---\")\n",
-    "print(avg_charges_by_churn)\n",
+    "# Convert 'Churn' column from Yes/No to 1/0\n",
+    "churn_df['Churn'] = churn_df['Churn'].apply(lambda x: 1 if x == 'Yes' else 0)\n",
     "\n",
-    "# Visualize the result\n",
-    "plt.figure(figsize=(8, 5))\n",
-    "sns.barplot(x=avg_charges_by_churn.index, y=avg_charges_by_churn.values)\n",
-    "plt.title('Average Monthly Charges for Churn vs. Non-Churn Customers')\n",
-    "plt.xlabel('Churn Status (1 = Churned, 0 = Stayed)')\n",
-    "plt.ylabel('Average Monthly Charges')\n",
-    "plt.show()"
+    "# Select features and target\n",
+    "# For simplicity, we'll use only the numeric features for this model\n",
+    "numeric_features = ['tenure', 'MonthlyCharges', 'TotalCharges']\n",
+    "target = 'Churn'\n",
+    "\n",
+    "X = churn_df[numeric_features]\n",
+    "y = churn_df[target]\n",
+    "\n",
+    "print(\"Data preprocessing complete. Features used for modeling:\")\n",
+    "print(X.columns.tolist())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d2b7dcf7",
+   "id": "087ce8ba",
    "metadata": {},
    "source": [
     "### 3. Predictive Modeling\n",
-    "The EDA shows a surprising result: customers who churned, on average, had lower monthly charges. This refutes my initial hypothesis and suggests other factors are more important.\n",
     "\n",
-    "Now, let's build machine learning models to predict churn based on all available features. We will prepare the data and then compare two different classification models: **Decision Tree** and **Logistic Regression**."
+    "Now that our data is clean, we can split it and train our classification models to compare their performance."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2656aa90",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "id": "06bdb91b",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define features (X) and target (y)\n",
-    "X = churn_df.drop(columns=['churn'])\n",
-    "y = churn_df['churn']\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
-    "# Split data into training and testing sets (70% training, 30% testing)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a74f14cd",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
     "# --- Model 1: Decision Tree ---\n",
     "dt_model = DecisionTreeClassifier(random_state=42)\n",
     "dt_model.fit(X_train, y_train)\n",
@@ -137,77 +113,94 @@
     "lr_score = accuracy_score(y_test, lr_predictions)\n",
     "\n",
     "print(\"--- MODEL PERFORMANCE COMPARISON ---\")\n",
-    "print(f\"Decision Tree Accuracy: {dt_score}\")\n",
-    "print(f\"Logistic Regression Accuracy: {lr_score}\")"
+    "print(f\"Decision Tree Accuracy: {dt_score:.4f}\")\n",
+    "print(f\"Logistic Regression Accuracy: {lr_score:.4f}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "da0a6d34",
+   "id": "4fb44c53",
    "metadata": {},
    "source": [
     "### 4. Model Interpretation: What Drives Churn?\n",
-    "An accuracy score tells us *how* well the model performs, but not *why*. Let's inspect the Decision Tree model to understand which features it found most important when making a prediction."
+    "\n",
+    "Let's inspect the Decision Tree model to understand which of our numeric features it found most important."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d689b20b",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "id": "3c4004af",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get feature importances from the trained Decision Tree model\n",
     "feature_importances = dt_model.feature_importances_\n",
-    "feature_names = X.columns\n",
     "\n",
     "# Create a DataFrame for better visualization\n",
-    "importance_df = pd.DataFrame({'feature': feature_names, 'importance': feature_importances})\n",
+    "importance_df = pd.DataFrame({'feature': numeric_features, 'importance': feature_importances})\n",
     "importance_df = importance_df.sort_values(by='importance', ascending=False)\n",
     "\n",
     "print(\"--- FEATURE IMPORTANCE ANALYSIS (from Decision Tree) ---\")\n",
-    "print(importance_df)"
+    "display(importance_df)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "00eccedb",
+   "id": "e3aa1dab",
    "metadata": {},
    "source": [
     "### 5. Prediction on a New Customer\n",
-    "Finally, let's use our trained Decision Tree model to predict whether a new, hypothetical customer is likely to churn."
+    "\n",
+    "Finally, let's use our trained Decision Tree model to predict whether a new, hypothetical customer with specific features is likely to churn. This demonstrates the practical application of our model."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2107fa7",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "id": "ce1dbe07",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# New customer features: tenure=6, monthly_charges=90, age=40\n",
-    "new_customer = [[6, 90, 40]]\n",
-    "prediction = dt_model.predict(new_customer)\n",
+    "# Create a dictionary for a new customer's data\n",
+    "# The keys must match the feature names used for training\n",
+    "new_customer_data = {\n",
+    "    'tenure': [12],           # 12 months with the company\n",
+    "    'MonthlyCharges': [75.5], # 75.5 monthly charge\n",
+    "    'TotalCharges': [900.5]   # 900.5 total charges\n",
+    "}\n",
     "\n",
-    "print(\"\\n--- NEW CUSTOMER CHURN PREDICTION ---\")\n",
+    "# Convert the dictionary to a DataFrame to ensure feature names are correct\n",
+    "new_customer_df = pd.DataFrame(new_customer_data)\n",
+    "\n",
+    "# Use the trained Decision Tree model to make a prediction\n",
+    "prediction = dt_model.predict(new_customer_df)\n",
+    "\n",
+    "print(\"\\n--- PREDICTION FOR A NEW CUSTOMER ---\")\n",
     "if prediction[0] == 1:\n",
-    "    print(\"Prediction: This new customer is LIKELY TO CHURN.\")\n",
+    "    print(\"Prediction Result: This new customer is LIKELY TO CHURN.\")\n",
     "else:\n",
-    "    print(\"Prediction: This new customer is LIKELY TO STAY.\")"
+    "    print(\"Prediction Result: This new customer is LIKELY TO STAY.\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
