Add EDA visualization and finalize analysis

--- a/customer_churn_analysis.ipynb
+++ b/customer_churn_analysis.ipynb
@@ -77,7 +77,34 @@
     "y = churn_df[target]\n",
     "\n",
     "print(\"Data preprocessing complete. Features used for modeling:\")\n",
-    "print(X.columns.tolist())"
+    "print(X.columns.tolist())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fa89557",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- EDA: Visualize Churn vs. Key Features ---\n",
+    "# Let's visualize our earlier finding about MonthlyCharges to tell the story.\n",
+    "\n",
+    "# Calculate average monthly charges by churn status\n",
+    "avg_charges_by_churn = churn_df.groupby('Churn')['MonthlyCharges'].mean()\n",
+    "\n",
+    "# Create the bar plot\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.barplot(x=avg_charges_by_churn.index, y=avg_charges_by_churn.values, palette='viridis')\n",
+    "\n",
+    "# Add titles and labels for clarity\n",
+    "plt.title('Average Monthly Charges by Churn Status', fontsize=16)\n",
+    "plt.xlabel('Churn Status', fontsize=12)\n",
+    "plt.ylabel('Average Monthly Charges ($)', fontsize=12)\n",
+    "# Make x-axis labels more readable\n",
+    "plt.xticks([0, 1], ['Stayed', 'Churned']) \n",
+    "plt.show()"
    ]
   },
   {
